# multi-winner-bridging

./: README.md  alpha_scores.csv  main.py  main_pb.py  main_pb_batch.py  max_scores_by_size.csv  pyproject.toml  raw_scores.csv  reference.md  run_camp_songs.py  voting.md
analysis/: cons_cc_quadratic_analysis.md  ejr_best_cons.json  ejr_best_pairs.json  ejr_maximal_results.json
data/: _PERMANENT_DOWNLOAD_LINK.txt
data/pb_selected_10_20251201_223154/: _PERMANENT_DOWNLOAD_LINK.txt
data/pb_selected_10_20251202_023743/: _PERMANENT_DOWNLOAD_LINK.txt
data/pb_selected_18_20251201_214702/: _PERMANENT_DOWNLOAD_LINK.txt
output/: README.md  alpha_scores_by_size.csv  min_alpha_summary.csv
scripts/: analyze_warsaw_sets.py  check_alpha_scores.py  check_cpu.py  check_ejr_best_committees.py  check_ejr_maximal.py  create_min_alpha_table.py  generate_cons_cc_analysis.py  isolate_warsaw_committees.py  plot_alpha_histograms.py  plot_alpha_histograms_no_ones.py  plot_best_alpha_scatter.py  plot_c_vs_d.py  plot_components_histogram.py  plot_cons_vs_cc_scatter.py  plot_cons_vs_cc_single_election.py  plot_ejr_bar.py  plot_main_tradeoff_bar.py  plot_metrics_bar.py  plot_pareto_front.py  plot_tradeoff_bar.py  plot_voting_methods_scatter.py  plot_voting_methods_tradeoff_bar.py
src/: __init__.py  alpha_approx.py  alpha_approx_by_size.py  data_loader.py  mes.py  pb_data_loader.py  plot_ejr.py  plot_individual_sizes.py  plot_results.py  plot_results_by_size.py  run_mes.py  scoring.py  timer.py  voting_methods.py
tests/: test_data_loader.py  test_scoring.py
(+739 files in other folders)
