[project]
name = "preflib-score-calculator"
version = "0.1.0"
description = "Calculate AV, CC, PAIRS, CONS, and EJR scores for PrefLib election data"
requires-python = ">=3.12"
dependencies = [
    "preflibtools>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "abcvoting>=2.0.0",
    "gurobipy>=13.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

